# fixed-bigint-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_BASELINE_PROBE.md  CLAUDE.md  CT_VERIFY.md  Cargo.toml  README.md
.github/workflows/: claude-code-review.yml  claude.yml  coverage.yml  ct-ctgrind.yml  ct-verify.yml  hw-ct.yml  pi-bench-matrix.yml  pi-probe-status.yml  pi-smoketest.yml  pre-commit.yaml  rust.yml
ct-verify/: README.md
ct-verify/ct-ctgrind/: Cargo.toml  Dockerfile  README.md
ct-verify/ct-ctgrind/src/: fixtures_asym.rs  fixtures_cat_a.rs  fixtures_cat_b.rs  fixtures_cat_c.rs  fixtures_neg.rs  macros.rs  main.rs  valgrind.rs
ct-verify/ct-ctgrind/src/valgrind/: real.rs  stub.rs
ct-verify/ct-driver/: Cargo.toml
ct-verify/ct-driver/src/: main.rs  mnemonics.rs  parse.rs  report.rs  target.rs
ct-verify/ct-fixtures/: Cargo.toml
ct-verify/ct-fixtures/src/: fixtures_asym.rs  fixtures_cat_a.rs  fixtures_cat_b.rs  fixtures_cat_c.rs  fixtures_ct_traits.rs  fixtures_heapless.rs  fixtures_neg.rs  lib.rs
ct-verify/cyccnt-hardware/: Cargo.toml  README.md  build.rs  krabi-caliper.toml
ct-verify/cyccnt-hardware/.cargo/: config.toml
ct-verify/cyccnt-hardware/src/: main.rs
ct-verify/panic-free-audit/: Cargo.toml  check.sh
ct-verify/panic-free-audit/src/: lib.rs  neg_controls.rs
src/: cios_ops.rs  const_numtrait.rs  const_numtraits.rs  fixedint.rs  fixeduint.rs  lib.rs  machineword.rs  mul_acc_ops.rs  patch_num_traits.rs  personality.rs
src/fixeduint/: abs_diff_impl.rs  add_sub_impl.rs  bit_ops_impl.rs  byte_conversion_panic_free.rs  checked_pow_impl.rs  cios_ops_impl.rs  cios_row_ops_impl.rs  const_to_from_bytes.rs  div_ceil_impl.rs  euclid.rs  extended_precision_impl.rs  from_byte_slice_impl.rs  has_nonzero_impl.rs  has_personality_impl.rs  ilog_impl.rs  isqrt_impl.rs  iter_impl.rs  midpoint_impl.rs  mul_acc_ops_impl.rs  mul_div_impl.rs  multiple_impl.rs  num_integer_impl.rs  num_traits_casts.rs  num_traits_identity.rs  parity_impl.rs  power_of_two_impl.rs  power_of_two_ops_impl.rs  prim_int_impl.rs  roots_impl.rs  strict_impl.rs  string_conversion.rs  to_from_bytes.rs
src/heapless/: abs_diff.rs  arith.rs  bit_deposit.rs  bit_scan.rs  bits.rs  bitwise.rs  bytes.rs  cios.rs  cmp.rs  div_rem.rs  euclid.rs  from_prim.rs  has_nonzero.rs  has_personality.rs  identities.rs  ilog.rs  isqrt.rs  iter.rs  midpoint.rs  mod.rs  multiple.rs  num_integer_impl.rs  num_traits_bridge.rs  parity.rs  pow.rs  power_of_two.rs  prim_bits.rs  prim_int.rs  roots_impl.rs  shift.rs  shift_ops.rs  strict.rs  string_conversion.rs  to_bytes.rs  zeroize_impl.rs
tests/: add_subtract.rs  bit_and.rs  bit_ops.rs  bit_or.rs  bit_shift.rs  bit_xor.rs  carrier_generic.rs  carrier_num_traits.rs  const_tobytes_trait_roundtrip.rs  core_functionality.rs  heapless_basic.rs  heapless_carrier_parity.rs  heapless_cios.rs  heapless_string.rs  heapless_widemul_diag.rs  identity.rs  integer.rs  iter_test.rs  mul_div.rs  num_assign.rs  odd_even_typestate.rs  personality_integration.rs  personality_negative_guarantees.rs  primint.rs  probe_const_tobytes.rs  roots.rs  string_convert.rs
tests/carrier_generic/: arithmetic.rs  bits_and_compare.rs  harness.rs  numeric.rs  serialization.rs  shifts_and_bitwise.rs
tests/helper/: mod.rs
