[package]
name = "fixed-bigint"
version = "0.1.9"
authors = ["kaidokert <kaidokert@gmail.com>"]
documentation = "https://docs.rs/fixed-bigint"
edition = "2018"
description = """
Fixed-size big integer implementation for Rust
"""

keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "no-std"]
repository = "https://github.com/kaidokert/fixed-bigint-rs"
readme = "README.md"
homepage = "https://github.com/kaidokert/fixed-bigint-rs"
license = "Apache-2.0"
exclude = ["/.github/*"]

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dependencies.num-integer]
version = "0.1.45"
default-features = false

[dependencies.zeroize]
version = "1.8.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16

[features]
use-unsafe = []
default = ["use-unsafe"]
