[workspace]
members = [
    ".",
    "ct-verify/ct-fixtures",
    "ct-verify/ct-driver",
    "ct-verify/ct-ctgrind",
    "ct-verify/panic-free-audit",
]
resolver = "2"

# Pinned release profile: deterministic codegen so a passing PR locks
# the inspection output.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
debug = false
overflow-checks = false
incremental = false


[package]
name = "fixed-bigint"
version = "0.3.1"
authors = ["kaidokert <kaidokert@gmail.com>"]
documentation = "https://docs.rs/fixed-bigint"
edition = "2018"
rust-version = "1.86"
description = """
Fixed-size big integer implementation for Rust
"""

keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "no-std", "no-std::no-alloc"]
repository = "https://github.com/kaidokert/fixed-bigint-rs"
readme = "README.md"
homepage = "https://github.com/kaidokert/fixed-bigint-rs"
license = "Apache-2.0"
exclude = ["/.github/*"]

[dependencies.num-traits]
version = "0.2.19"
default-features = false

# Experimental: the in-tree const-friendly fork of num-traits. Used to
# replace the local `src/const_numtraits.rs` module on this branch and
# see what (if anything) breaks in the API/contract.
[dependencies.const-num-traits]
path = "../num-traits"
default-features = false

[dependencies.num-integer]
version = "0.1.45"
default-features = false

[dependencies.c0nst]
version = "0.2"

[dependencies.zeroize]
version = "1.8.1"
optional = true
default-features = false

[dependencies.subtle]
version = "2.6"
default-features = false

# Optional modmath integration: enables `modmath::CiosRowOps` for
# `FixedUInt`. Path-pinned during the v0.4 experimental window
# (modmath 0.4.0-alpha.0). `wide-mul` is the modmath feature that
# re-exports `CiosRowOps` at the crate root; it transitively pulls
# `fixed-bigint` without the `modmath` feature, so there's no
# feature-cycle — Cargo resolves cleanly.
[dependencies.modmath]
path = "../modmath-rs/modmath"
optional = true
default-features = false
features = ["wide-mul"]

[dev-dependencies.static_assertions]
version = "1.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16

[features]
use-unsafe = []
1_87 = []
nightly = ["c0nst/nightly", "const-num-traits/nightly", "1_87"]
modmath = ["dep:modmath"]
default = []
