[workspace]
members = [
    ".",
    "ct-verify/ct-fixtures",
    "ct-verify/ct-driver",
    "ct-verify/ct-ctgrind",
    "ct-verify/panic-free-audit",
]
resolver = "2"

# Pinned release profile: deterministic codegen so a passing PR locks
# the inspection output.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
debug = false
overflow-checks = false
incremental = false


[package]
name = "fixed-bigint"
version = "0.4.0"
authors = ["kaidokert <kaidokert@gmail.com>"]
documentation = "https://docs.rs/fixed-bigint"
edition = "2024"
rust-version = "1.86"
description = """
Fixed-size big integer implementation for Rust
"""

keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "no-std", "no-std::no-alloc"]
repository = "https://github.com/kaidokert/fixed-bigint-rs"
readme = "README.md"
homepage = "https://github.com/kaidokert/fixed-bigint-rs"
license = "Apache-2.0"
exclude = ["/.github/*"]

[dependencies.num-traits]
version = "0.2.19"
optional = true
default-features = false

[dependencies.num-integer]
version = "0.1.45"
optional = true
default-features = false

[dependencies.const-num-traits]
version = "0.1.1"
default-features = false
features = ["ct"]

[dependencies.c0nst]
version = "0.2"

[dependencies.zeroize]
version = "1.8.1"
optional = true
default-features = false

[dependencies.subtle]
version = "2.6"
default-features = false

[dependencies.modmath-cios]
version = "0.1"
optional = true
default-features = false

[dev-dependencies.static_assertions]
version = "1.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16

[features]
use-unsafe = []
1_87 = []
nightly = ["c0nst/nightly", "const-num-traits/nightly", "1_87"]
cios = ["dep:modmath-cios"]
num-traits = ["dep:num-traits", "dep:num-integer"]
default = ["num-traits"]
