[package]
name = "ct-ctgrind"
version = "0.0.0"
edition = "2021"
rust-version = "1.86"
publish = false
description = "Valgrind taint-based CT verifier for fixed-bigint primitives."

[[bin]]
name = "ct-ctgrind"
path = "src/main.rs"

[dependencies]
# Link the fixtures as a Rust rlib so this binary can call each
# `extern "C"` symbol directly. `default-features = false` disables
# ct-fixtures' `#[panic_handler]` so std's panic handler is used.
ct-fixtures = { path = "../ct-fixtures", default-features = false }

krabi-caliper = { version = "0.1", features = ["ctgrind"] }
