[package]
name = "ct-driver"
version = "0.0.0"
edition = "2021"
rust-version = "1.86"
publish = false
description = "Cross-target disassembly + branch-grep driver for fixed-bigint CT verify."

[[bin]]
name = "ct-driver"
path = "src/main.rs"

[dependencies]
krabi-caliper = { version = "0.1", features = ["host"] }

[dev-dependencies]
