[package]
name = "ct-fixtures"
version = "0.0.0"
edition = "2021"
rust-version = "1.73"
publish = false
description = "Inspection fixtures for the fixed-bigint CT-verify harness."

[lib]
# staticlib so embedded targets emit a .a we can disassemble without
# needing a linker script or runtime. rlib so the future ct-fixtures-mcu
# companion (DWT-on-hardware) can link the same symbols as a regular
# Rust dependency.
crate-type = ["staticlib", "rlib"]

[dependencies]
fixed-bigint = { path = "../.." }
subtle = { version = "2.6", default-features = false }

# Profile settings live at the workspace root (cargo only honors them there).
