[package]
name = "ct-fixtures"
version = "0.0.0"
edition = "2021"
rust-version = "1.86"
publish = false
description = "Inspection fixtures for the fixed-bigint CT-verify harness."

[lib]
# staticlib so embedded targets emit a .a we can disassemble without
# needing a linker script or runtime. rlib so the future ct-fixtures-mcu
# companion (DWT-on-hardware) can link the same symbols as a regular
# Rust dependency.
crate-type = ["staticlib", "rlib"]

[features]
default = ["panic-handler"]
# Define a `#[panic_handler]` in this crate. Required for no_std staticlib
# builds (every asm-grep target). Disabled by host-side consumers (ct-ctgrind)
# that link ct-fixtures as rlib alongside std, which supplies its own.
panic-handler = []

[dependencies]
fixed-bigint = { path = "../.." }
const-num-traits = { version = "0.2.1", default-features = false, features = ["ct"] }
num-integer = { version = "0.1", default-features = false }
subtle = { version = "2.6", default-features = false }

# Profile settings live at the workspace root (cargo only honors them there).
