[package]
name = "panic-free-audit"
version = "0.0.0"
edition = "2021"
rust-version = "1.86"
publish = false
description = "Linker-DCE audit: confirm `FixedUInt::*_bytes_fixed` synthesises no panic symbols."

[lib]
# staticlib so a cross-target build produces a `.a` that `cargo nm` can
# read without needing a linker script or runtime. Same shape as
# `ct-verify/ct-fixtures`.
crate-type = ["staticlib"]

[dependencies]
# `use-unsafe` gates the `to_from_bytes` module (which owns
# `BytesHolder` + `holder_be`/`holder_le` and the `num_traits::ToBytes`
# impl for `FixedUInt`). Without it, the trait-path fixtures below
# can't reach the code under test.
fixed-bigint = { path = "../..", features = ["use-unsafe"] }
const-num-traits = { version = "0.2.1", default-features = false }
num-traits = { version = "0.2", default-features = false }

# Workspace `[profile.release]` (lto=fat, codegen-units=1, opt-level=z,
# panic=abort) is what makes DCE worth measuring; do not override here.
